--- a/src/package.json
+++ b/src/package.json
@@ -44,6 +44,7 @@
     "xml-js": "1.6.11",
     "run-script-os": "1.1.5",
     "node-watch": "0.7.1",
-    "rainbow-code": "2.1.7"
+    "rainbow-code": "2.1.7",
+    "smartypants": "0.1.1"
   }
 }
