--- a/.github/workflows/test_website.yml
+++ b/.github/workflows/test_website.yml
@@ -32,6 +32,8 @@ jobs:
       run: ./src/tools/scripts/run_and_test_website.sh
     - name: Remove node modules to avoid linting errors
       run: rm -rf src/node_modules
+    - name: Use more complete checks for generated HTML linting
+      run: cp -f .github/linters/.htmlhintrc_morechecks .github/linters/.htmlhintrc
     - name: Lint Generated HTML
       uses: docker://github/super-linter:v3.14.0
       env:
