--- a/.github/lighthouse/lighthouse-config-prod.json
+++ b/.github/lighthouse/lighthouse-config-prod.json
@@ -4,7 +4,7 @@
       "preset": "lighthouse:no-pwa",
       "assertions": {
         "categories:accessibility": ["error", {"minScore": 1}],
-        "categories:best-practices": ["error", {"minScore": 1}],
+        "categories:best-practices": ["error", {"minScore": 0.93}],
         "categories:seo": ["error", {"minScore": 1}],
         "bootup-time": "off",
         "dom-size": "off",
@@ -12,12 +12,15 @@
         "first-cpu-idle": "off",
         "first-meaningful-paint": "off",
         "font-display": "off",
+        "inspector-issues": "off",
         "interactive": "off",
         "largest-contentful-paint": "off",
         "mainthread-work-breakdown": "off",
         "max-potential-fid": "off",
-        "speed-index": "off",
         "render-blocking-resources": "off",
+        "server-response-time": "off",
+        "speed-index": "off",
+        "third-party-facades": "off",
         "unminified-css": "off",
         "unminified-javascript": "off",
         "unused-css-rules": "off",
