--- a/.github/workflows/compress-images.yml
+++ b/.github/workflows/compress-images.yml
@@ -35,7 +35,7 @@ on:
 jobs:
   build:
     name: Compress All Images
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     # Only run on main repo on and PRs that match the main repo
     if: |
       github.repository == 'HTTPArchive/almanac.httparchive.org' &&
