--- a/.github/workflows/production-checks.yml
+++ b/.github/workflows/production-checks.yml
@@ -20,7 +20,7 @@ on:
   workflow_dispatch:
 jobs:
   checks:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: github.repository == 'HTTPArchive/almanac.httparchive.org'
     steps:
     - name: Checkout branch
