--- a/.github/workflows/test_website.yml
+++ b/.github/workflows/test_website.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     name: Build and Test Website
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: github.repository == 'HTTPArchive/almanac.httparchive.org'
     steps:
     - name: Checkout branch
@@ -23,7 +23,7 @@ jobs:
     - name: Setup Node.js for use with actions
       uses: actions/setup-node@v2.1.4
       with:
-        node-version: 12.x
+        node-version:  '12'
     - name: Set up Python 3.8
       uses: actions/setup-python@v2.2.1
       with:
