--- a/src/app.yaml
+++ b/src/app.yaml
@@ -8,6 +8,10 @@ handlers:
   upload: static/fonts/.*\.(woff|woff2)$
   secure: always
   expiration: 365d
+  http_headers:
+    strict-transport-security: max-age=31556926; includeSubDomains
+    x-content-type-options: nosniff
+    vary: accept-encoding
 
 - url: /static/images/2019/[0-2][0-9]_.*/.*$
   script: auto
@@ -17,9 +21,31 @@ handlers:
   script: auto
   secure: always
 
+- url: /static/css
+  static_dir: static/css
+  secure: always
+  http_headers:
+    content-type: text/css; charset=utf-8
+    strict-transport-security: max-age=31556926; includeSubDomains
+    x-content-type-options: nosniff
+    vary: accept-encoding
+
+- url: /static/js
+  static_dir: static/js
+  secure: always
+  http_headers:
+    content-type: application/javascript; charset=utf-8
+    strict-transport-security: max-age=31556926; includeSubDomains
+    x-content-type-options: nosniff
+    vary: accept-encoding
+
 - url: /static
   static_dir: static
   secure: always
+  http_headers:
+    strict-transport-security: max-age=31556926; includeSubDomains
+    x-content-type-options: nosniff
+    vary: accept-encoding
 
 - url: /.*
   script: auto
