--- a/.github/workflows/test_website.yml
+++ b/.github/workflows/test_website.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Use more complete checks for generated HTML linting
       run: cp -f .github/linters/.htmlhintrc_morechecks .github/linters/.htmlhintrc
     - name: Lint Generated HTML
-      uses: docker://github/super-linter:v3.14.0
+      uses: github/super-linter@v3.15.1
       env:
         DEFAULT_BRANCH: main
         FILTER_REGEX_INCLUDE: src/static/html/.*
