--- a/.github/workflows/check-translations-lengths.yml
+++ b/.github/workflows/check-translations-lengths.yml
@@ -21,10 +21,11 @@ on:
   workflow_dispatch:
   pull_request:
     paths:
-      - 'src/content/'
-      - 'src/templates/'
+      - '**.html'
+      - '**.md'
+
 jobs:
-  lint:
+  check_lengths:
     name: Check Lengths
     steps:
       - name: Checkout Code
