--- a/.github/workflows/check-translations-lengths.yml
+++ b/.github/workflows/check-translations-lengths.yml
@@ -45,7 +45,8 @@ jobs:
           fetch-depth: 0
       - name: Test changed translations
         if: github.event_name != 'workflow_dispatch'
-        env: BASE_FOLDER="${GITHUB_WORKSPACE}/original"
+        env: |
+          BASE_FOLDER: "${{ GITHUB_WORKSPACE }}/original"
         run: |
           cd this_run/src
           ./src/tools/scripts/check_translation_length.sh
