--- a/.github/workflows/check-translations-lengths.yml
+++ b/.github/workflows/check-translations-lengths.yml
@@ -27,6 +27,7 @@ on:
 jobs:
   check_lengths:
     name: Check Lengths
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2.3.3
