--- a/.github/workflows/check-translations-lengths.yml
+++ b/.github/workflows/check-translations-lengths.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v2.3.3
         with:
           path: original
-          branch: main
+          ref: main
           repository: HTTPArchive/almanac.httparchive.org
           # Full git history is needed to get a proper list of changed files
           fetch-depth: 0
@@ -49,7 +49,7 @@ jobs:
         run: |
           echo "BASE_FOLDER=$GITHUB_WORKSPACE/original" >> $GITHUB_ENV
           cd this_run/src
-          ./src/tools/scripts/check_translation_length.sh
+          ./tools/scripts/check_translation_length.sh
       - name: Test all translations
         if: github.event_name == 'workflow_dispatch' || github.event_name == 'workflow_dispatch'
         run: |
