--- a/.github/workflows/check-translations-lengths.yml
+++ b/.github/workflows/check-translations-lengths.yml
@@ -51,8 +51,8 @@ jobs:
           COMMIT_SHA: ${{ github.sha }}
         run: |
           echo "BASE_FOLDER=$GITHUB_WORKSPACE/original" >> $GITHUB_ENV
-          cd this_run/src
-          ./tools/scripts/check_translation_length.sh -v
+          cd this_run
+          ./src/tools/scripts/check_translation_length.sh -v
       - name: Test all translations
         if: github.event_name == 'workflow_dispatch' || github.event_name == 'workflow_dispatch'
         run: |
