--- a/.github/workflows/check-translations-lengths.yml
+++ b/.github/workflows/check-translations-lengths.yml
@@ -50,11 +50,11 @@ jobs:
           RUN_TYPE: ${{ github.event_name }}
           COMMIT_SHA: ${{ github.sha }}
         run: |
-          echo "BASE_FOLDER=$GITHUB_WORKSPACE/original" >> $GITHUB_ENV
-          cd this_run
-          ./src/tools/scripts/check_translation_length.sh -v
+          echo "BASE_FOLDER=$GITHUB_WORKSPACE/original/src" >> $GITHUB_ENV
+          cd this_run/src
+          ./tools/scripts/check_translation_length.sh -v
       - name: Test all translations
         if: github.event_name == 'workflow_dispatch' || github.event_name == 'workflow_dispatch'
         run: |
           cd this_run/src
-          ./src/tools/scripts/check_translation_length.sh -a -v
+          ./tools/scripts/check_translation_length.sh -a -v
