--- a/.github/workflows/predeploy.yml
+++ b/.github/workflows/predeploy.yml
@@ -34,6 +34,8 @@ jobs:
       uses: actions/setup-node@v2.1.5
       with:
         node-version: '12'
+    - name: Upgrade npm
+      run: npm i npm@latest
     - name: Set up Python 3.8
       uses: actions/setup-python@v2.2.1
       with:
