--- a/src/package.json
+++ b/src/package.json
@@ -46,5 +46,8 @@
     "smartypants": "0.1.1",
     "web-vitals": "1.1.1",
     "xml-js": "1.6.11"
+  },
+  "dependencies": {
+    "npm": "^7.6.3"
   }
 }
