--- a/.github/workflows/test-template-changes.yml
+++ b/.github/workflows/test-template-changes.yml
@@ -38,10 +38,10 @@ jobs:
         node-version:  '12'
     - name: Upgrade npm
       run: |
+        which --all npm
         cd src
         npm i npm@latest
-    - name: Upgrade npm
-      run: npm i npm@latest
+        which --all npm
     - name: Test Template Changes
       run: ./src/tools/scripts/test_template_changes.sh
     - name: 'Comment PR'
