--- a/.github/workflows/test_website.yml
+++ b/.github/workflows/test_website.yml
@@ -26,10 +26,10 @@ jobs:
         node-version:  '12'
     - name: Upgrade npm
       run: |
-        which --all npm
+        which -a npm
         cd src
         npm i npm@latest
-        which --all npm
+        which -a npm
     - name: Set up Python 3.8
       uses: actions/setup-python@v2.2.1
       with:
