--- a/.github/workflows/progress-tracker.yml
+++ b/.github/workflows/progress-tracker.yml
@@ -39,7 +39,7 @@ jobs:
             }
 
             const teamMembers = {
-              Leads: {}
+              Leads: {},
               Authors: {},
               Reviewers: {},
               Analysts: {},
