--- a/.github/workflows/test_website.yml
+++ b/.github/workflows/test_website.yml
@@ -9,6 +9,8 @@ name: Test Website
 on:
   workflow_dispatch:
   pull_request:
+    paths-ignore:
+      - 'sql/**'
 jobs:
   build:
     name: Build and Test Website
