--- a/.github/lighthouse/lighthouse-config-prod.json
+++ b/.github/lighthouse/lighthouse-config-prod.json
@@ -7,6 +7,7 @@
         "categories:best-practices": ["error", {"minScore": 0.93}],
         "categories:seo": ["error", {"minScore": 1}],
         "bootup-time": "off",
+        "csp-xss": "off",
         "dom-size": "off",
         "first-contentful-paint": "off",
         "first-cpu-idle": "off",
