--- a/.github/lighthouse/lighthouse-config-prod.json
+++ b/.github/lighthouse/lighthouse-config-prod.json
@@ -1,7 +1,7 @@
 {
   "ci": {
     "assert": {
-      "preset": "lighthouse:no-pwa",
+      "preset": "lighthouse:recommended",
       "assertions": {
         "categories:accessibility": ["error", {"minScore": 1}],
         "categories:best-practices": ["error", {"minScore": 0.93}],
@@ -14,13 +14,18 @@
         "first-meaningful-paint": "off",
         "font-display": "off",
         "inspector-issues": "off",
+        "installable-manifest": "off",
         "interactive": "off",
         "largest-contentful-paint": "off",
         "mainthread-work-breakdown": "off",
+        "maskable-icon": "off",
         "max-potential-fid": "off",
         "render-blocking-resources": "off",
         "server-response-time": "off",
+        "service-worker": "off",
         "speed-index": "off",
+        "splash-screen": "off",
+        "themed-omnibox": "off",
         "third-party-facades": "off",
         "unminified-css": "off",
         "unminified-javascript": "off",
