--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           echo "VALIDATE_ALL_CODEBASE=false" >> $GITHUB_ENV
       - name: Lint Code Base
+        #Temporarily use docker version - see https://github.com/github/super-linter/issues/1839
         #uses: github/super-linter@v4.6.0
         uses: docker://github/super-linter:v4.6.0
         env:
