--- a/src/package.json
+++ b/src/package.json
@@ -39,6 +39,7 @@
     "node-fetch": "3.1.0",
     "node-watch": "0.7.2",
     "prettier": "2.4.1",
+    "puppeteer": "^11.0.0",
     "rainbow-code": "2.1.7",
     "recursive-readdir": "2.2.2",
     "run-script-os": "1.1.6",
