--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "test": "node ./tools/test",
     "generate": "node ./tools/generate",
+    "figure-images": "node ./tools/generate/generate_figure_images",
     "watch": "node ./tools/generate/chapter_watcher",
     "ebooks": "node ./tools/generate/generate_ebook_pdfs",
     "deploy": "./tools/scripts/deploy.sh",
