--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "test": "node ./tools/test",
     "generate": "node ./tools/generate",
+    "figure-images": "node ./tools/generate/generate_figure_images",
     "watch": "node ./tools/generate/chapter_watcher",
     "ebooks": "node ./tools/generate/generate_ebook_pdfs",
     "deploy": "./tools/scripts/deploy.sh",
@@ -39,6 +40,7 @@
     "node-fetch": "3.1.0",
     "node-watch": "0.7.2",
     "prettier": "2.4.1",
+    "puppeteer": "11.0.0",
     "rainbow-code": "2.1.7",
     "recursive-readdir": "2.2.2",
     "run-script-os": "1.1.6",
