Fix Test Website badge to only look at main branch

--- a/.github/workflows/test_website.yml
+++ b/.github/workflows/test_website.yml
@@ -11,6 +11,9 @@ on:
   pull_request:
     paths-ignore:
       - 'sql/**'
+  push:
+    branches:
+      - main
 jobs:
   build:
     name: Build and Test Website
