--- a/.github/linters/.stylelintrc.json
+++ b/.github/linters/.stylelintrc.json
@@ -1,13 +1,16 @@
 {
     "extends": "stylelint-config-standard",
     "rules": {
+        "alpha-value-notation": "number",
         "at-rule-no-unknown": [
             true,
             {
                 "ignoreAtRules": ["prince-pdf"]
             }
         ],
+        "color-function-notation": null,
         "comment-empty-line-before": null,
+        "declaration-block-no-redundant-longhand-properties": null,
         "font-family-no-duplicate-names": [
             true,
             {
@@ -15,6 +18,7 @@
             }
         ],
         "length-zero-no-unit": null,
+        "max-line-length": null,
         "no-descending-specificity": null,
         "no-eol-whitespace": [
             true,
@@ -28,6 +32,12 @@
                 "ignoreProperties": ["prince-pdf-display-doc-title","prince-pdf-tag-type"]
             }
         ],
+        "property-no-vendor-prefix": [
+            true,
+            {
+                "ignoreValue": ["-ms-transform", "-ms-grid-row", "-ms-grid-column", "-webkit-appearance", "-webkit-text-size-adjust", "-webkit-transform"]
+            }
+        ],
         "selector-list-comma-newline-after": "always",
         "selector-pseudo-element-no-unknown": [
             true,
@@ -35,10 +45,18 @@
                 "ignorePseudoElements": ["footnote-call","footnote-marker"]
             }
         ],
+        "shorthand-property-no-redundant-values": null,
+        "string-quotes": null,
         "value-keyword-case": [
             "lower",
             {
                 "ignoreKeywords": ["Art","A4","A5"]
+            }
+        ],
+        "value-no-vendor-prefix": [
+            true,
+            {
+                "ignoreValue": ["-ms-grid", "-webkit-sticky"]
             }
         ]
     }
