--- a/.github/linters/.stylelintrc.json
+++ b/.github/linters/.stylelintrc.json
@@ -11,6 +11,7 @@
         "color-function-notation": null,
         "comment-empty-line-before": null,
         "declaration-block-no-redundant-longhand-properties": null,
+        "font-family-name-quotes": "always-where-recommended",
         "font-family-no-duplicate-names": [
             true,
             {
@@ -35,7 +36,7 @@
         "property-no-vendor-prefix": [
             true,
             {
-                "ignoreValue": ["-ms-transform", "-ms-grid-row", "-ms-grid-column", "-webkit-appearance", "-webkit-text-size-adjust", "-webkit-transform"]
+                "ignoreProperties": ["appearance", "grid-row", "grid-column", "text-size-adjust", "transform"]
             }
         ],
         "selector-list-comma-newline-after": "always",
@@ -56,7 +57,7 @@
         "value-no-vendor-prefix": [
             true,
             {
-                "ignoreValue": ["-ms-grid", "-webkit-sticky"]
+                "ignoreProperties": ["grid", "sticky"]
             }
         ]
     }
