--- a/src/package.json
+++ b/src/package.json
@@ -31,8 +31,7 @@
     "stop": "run-script-os",
     "stop:darwin:linux": "./tools/scripts/stop_website.sh",
     "stop:win32": "call tools/scripts/stop_website.bat",
-    "timestamps": "node ./tools/generate/generate_timestamps",
-    "thisisatest": "test to regenerate chapters"
+    "timestamps": "node ./tools/generate/generate_timestamps"
   },
   "devDependencies": {
     "ejs": "3.1.6",
